--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,30 +1,17 @@
-@(message: String)(name: String)(input: Form[PublicUser])
+@(message: String)(name: String)
 
 @import helper._
 
-@main("Welcome to Play") {
+@main("Welcome to bitCoupon") {
 	
-	@message
-    <h4>Registration: </h4>
+	<h2>@message @name</h2>
+    <h4>Home: </h4>
+    
+    
+    <a href="/registration"> Registration </a> 
+    <br><br>
+    <a href="/loginpage"> Login </a> 
 
-  	  @helper.form(routes.Application.recognize()){
-    	<p> Name: </p>
-    	<input type="text" value="" id="username" name="username" /> <br>
-    	<p> Email: </p>
-    	<input type="text" value="" id="email" name="email" /> <br>
-    	<p> Set Password: </p>
-    	<input type="text" value="" id="password" name="password" /> <br>
-    	<input type="submit" value="Save" />
-      
-	} 
-	
-	
-@*	 @helper.form(routes.Application.addCustomer()){
-		@helper.inputText(inputCustomer("karina"))
-		<input type="submit" value="Dodaj nesto" /> 
 		
-	}  			*@
-	
-
 }
 
